force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <displayFormat>ST-{000000000}</displayFormat>
        <label>Staff Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>