force-app/main/default/objects/Staff__c/fields/Hospital_Website__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Website__c</fullName>
    <formula>HYPERLINK(&quot;https://www.apollohospitals.com/&quot;,  
IMAGE(&quot;https://nag-5b-dev-ed--c.develop.vf.force.com/resource/1708149178000/Apollo_Hospitals_Logo?&quot;, 
&quot;Apollo Hospitals&quot;, 100,100), &quot;_self&quot; )

/*
 HYPERLINK(url, friendly_name [, target]) 
 IMAGE(image_url, alternate_text [, height, width]) 
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Website</label>
    <type>Text</type>
</CustomField>