force-app/main/default/objects/Staff__c/fields/Internship_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Internship_Completion_Date__c</fullName>
    <formula>IF( ISPICKVAL( Staff_Type__c, &quot;Intern&quot;) ,  ADDMONTHS( Joining_Date__c ,6) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internship Completion Date</label>
    <type>Date</type>
</CustomField>