force-app/main/default/objects/Staff__c/fields/Is_eligible_for_share_holding__c.field-meta.xml
<CustomField>
    <fullName>Is_eligible_for_share_holding__c</fullName>
    <formula>/*CASE( ISPICKVAL(picklist_field, text_literal) , value1, result1, value2, result2,...,else_result) 

 CASE(expression, value1, result1, value2, result2,...,else_result) */

 IF( AND( ISPICKVAL( Staff_Type__c , &quot;Doctor&quot;),   
         OR(INCLUDES( Specialization__c , &quot;Cardiology&quot;),INCLUDES( Specialization__c , &quot;Neurology&quot;)),
         ISPICKVAL(  Qualification__c  , &quot;MBBS&quot;),
         Total_Years_of_Experience__c &gt; 10,
         VALUE( No_of_Years_worked_with_Apollo__c ) &gt; 5
   ) , true, 
   IF(AND( ISPICKVAL( Staff_Type__c , &quot;Nurse&quot;),   
         ISPICKVAL(  Qualification__c  , &quot;B.Sc Nursing&quot;),
         Total_Years_of_Experience__c &gt; 15,
         VALUE( No_of_Years_worked_with_Apollo__c ) &gt; 10 
   ) , true,  
   IF(AND( ISPICKVAL( Staff_Type__c , &quot;Pharmacist&quot;),   
         ISPICKVAL(  Qualification__c  , &quot;M.Pharm&quot;),
         Total_Years_of_Experience__c &gt; 15,
         VALUE( No_of_Years_worked_with_Apollo__c ) &gt; 10
   ), true,  
   IF(AND(Total_Years_of_Experience__c &gt; 20,
         VALUE( No_of_Years_worked_with_Apollo__c ) &gt; 15
   ), true, false) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is eligible for share holding</label>
    <type>Checkbox</type>
</CustomField>