force-app/main/default/objects/Staff__c/fields/No_of_Years_worked_with_Apollo__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years_worked_with_Apollo__c</fullName>
    <formula>TEXT(MFLOOR( (TODAY() -  Joining_Date__c )/365 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Years worked with Apollo</label>
    <type>Text</type>
</CustomField>