force-app/main/default/objects/Staff__c/fields/Previous_Experience__c.field-meta.xml
<CustomField>
    <fullName>Previous_Experience__c</fullName>
    <label>Previous Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>