force-app/main/default/objects/Staff__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>BPT</fullName>
            </value>
            <value>
                <fullName>GNM</fullName>
            </value>
            <value>
                <fullName>ANM</fullName>
            </value>
            <value>
                <fullName>B.Sc Nursing</fullName>
            </value>
            <value>
                <fullName>M.Pharm</fullName>
            </value>
            <value>
                <fullName>B.Pharm</fullName>
            </value>
            <value>
                <fullName>Normal Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>