force-app/main/default/objects/Staff__c/fields/Staff_Type__c.field-meta.xml
<CustomField>
    <fullName>Staff_Type__c</fullName>
    <label>Staff Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Lab Technician</fullName>
            </value>
            <value>
                <fullName>Ward Boy</fullName>
            </value>
            <value>
                <fullName>HOD</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>