force-app/main/default/objects/Staff__c/fields/Total_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Years_of_Experience__c</fullName>
    <formula>VALUE( No_of_Years_worked_with_Apollo__c ) +  Previous_Experience__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>