force-app/main/default/objects/Staff__c/validationRules/Valid_Date_of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Date_of_Birth</fullName>
    <active>true</active>
    <description>Date of Birth should have a past value</description>
    <errorConditionFormula>Date_of_Birth__c &gt;=  TODAY()</errorConditionFormula>
    <errorMessage>Please enter a valid Date of Birth.....!!</errorMessage>
</ValidationRule>