force-app/main/default/objects/Staff__c/listViews/Queue_1_Staff.listView-meta.xml
<ListView>
    <fullName>Queue_1_Staff</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue 1</label>
    <queue>Queue_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>